kubernetes/deploy/proxies/internal/backupvault/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backupvault
spec:
  ports:
  - protocol: TCP
    port: 5001
    name: http
    targetPort: 5001
